--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --white:#ffffff;
   --black:#000000;
   --light-blue:#eaf2fd;
+  --gray:#3f3f46;
 }
 
 *{
@@ -16,9 +17,11 @@ body{
 
 button{
   border:none;
-  padding: 5px;
+  border-radius: 3em;
+  padding:0.8em 2em;
 }
 .iconbutton{
+  padding: 5px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -27,38 +30,10 @@ button{
 .primarybutton{
   background-color:var(--blue);
   color: var(--white);
-  border-radius: 3em;
-  padding: 0.8em;
 }
-
-/* hero section */
-#hero-section{
-height: 100vh;
-max-height:calc(100vh - 8em);
-  background: var(--light-blue);
-  padding-top: 3em;
-}
-.intro-text{
-  color: #3f3f46;
-  text-align: center;
-}
-.intro-text h6{
-  font-size: 1.5em;
-  color: var(--blue);
- 
-}
-.intro-text span{
-  font-size: 2em;
-  margin-bottom: 0.5em;
-}
-.intro-text span h1{
-  display: inline;
-  font-size: 1em;
-  font-weight: 800;
-}
-.intro-text p{
-  font-size: 1.2em;
-  font-weight: 600;
-  margin-top: 0.5em;
+.outlinedbutton{
+  background-color: transparent;
+  border: 1px solid var(--gray);
+  color: var(--gray);
 }
 
