--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -1,17 +1,42 @@
-.about-container{
-    display: flex;
-    flex-direction: column-reverse;
+.about-container {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 2em;
 }
-.about-image{
-    display: flex;
-    justify-content: center;
+.about-image {
+  display: flex;
+  justify-content: center;
 }
-.about-image img{
-    height:20em;
+.about-image img {
+  height: 20em;
 }
-table{
-    text-align: left;
+table {
+  text-align: left;
+  margin-top: 1em;
 }
-table td,th{
-    padding: 0.5em 2em 0.5em 0;
+table td,
+th {
+  padding: 0.5em 2em 0.5em 0;
+}
+@media (min-width: 640px) {
+  .about-image img {
+    width: 100%;
+    height: auto;
+  }
+}
+@media (min-width: 1024px) {
+  .about-container {
+    flex-direction: row;
+  }
+  .about-image{
+    flex: 1;
+  }
+  .info-text{
+    flex: 1;
+    font-size: 1.5em;
+  }
+  .about-image img {
+    height: 30em;
+    object-fit: cover;
+  }
 }
