--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -3,6 +3,9 @@ nav{
     justify-content: space-between;
     align-items: center;
     padding: 20px 20px;
+    position:sticky;
+    top:0;
+    background-color: white;
   }
 
   .navlinks{
